Fix some color and styling issues for form. Remove debuggers for upload to heroku

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,12 @@
  }
 
  body {
-  font-family: sans-serif;
-  background: white;
-  color: $grey;
+  font-family: 'Mukta Malar', sans-serif;
+  background: #F3F3F3;
+  color: white;
   font-size: 12px;
   height: 100%;
+  margin: auto;
 }
 
 header {
