--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -2,9 +2,11 @@ input {
   height: 45px;
   width: 320px;
   border: 1px solid lightgray;
-  font-size: 100%;
+  font-size: 14px;
   margin: 15px;
+  font-family: 'Mukta Malar', sans-serif;
 }
+
 
 form {
   display: flex;
@@ -12,6 +14,14 @@ form {
   flex-direction: column;
 }
 
-#input {
-  background-color: green;
+#submit input{
+  background-color: #1DDD7C;
+  border-radius: 3px;
+  border: 0px;
+  color: white;
+}
+
+#div-form{
+  display: flex;
+  justify-content: center;
 }
