Complete Signup and Login Form CSS. Complete header CSS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,10 +25,9 @@
   color: white;
   font-size: 12px;
   height: 100%;
-  margin: auto;
 }
 
-header {
+#root{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
