--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -3,8 +3,20 @@ input {
   width: 320px;
   border: 1px solid lightgray;
   font-size: 14px;
-  margin: 15px;
+  margin: 7px;
   font-family: 'Mukta Malar', sans-serif;
+  background-color: #F3F3F3;
+  padding-left: 20px;
+  box-sizing: border-box;
+  color: black;
+}
+
+input:focus{
+  background-color: #FFFFFF;
+}
+
+input::placeholder{
+  color: #9A9EA9;
 }
 
 
@@ -19,9 +31,21 @@ form {
   border-radius: 3px;
   border: 0px;
   color: white;
+  padding-left: 0;
+  text-align: center;
 }
 
 #div-form{
   display: flex;
-  justify-content: center;
+  width: 320px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: auto;
+}
+
+#navLink{
+  color: #9A9EA9;
+  font-size: 14px;
+  align-self: flex-end;
 }
