--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,4 +1,49 @@
 header {
   background-color: #FFFFFF;
   color: #9A9EA9;
+  display: flex;
+  justify-content: space-between;
+  height: 70px;
+  align-items: center;
+}
+
+header h1{
+  font-size: 18px;
+  font-weight: bold;
+  // color: #26BCF2;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+  background: -webkit-linear-gradient(#007AC2, #26BCF2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+header h1 span{
+  font-weight: normal;
+  font-size: 34px;
+}
+
+#greeting{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+}
+
+#greeting span{
+  color: #9A9EA9;
+}
+
+#greeting button{
+  background-color: #1DDD7C;
+  color: #FFFFFF;
+  width: 60px;
+  padding-left: 8.5px;
+  padding-right: 8.5px;
+  text-align: center;
+  height: 30px;
+  margin-left: 20px;
+  margin-right: 180px;
+  font-weight: normal;
 }
