--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -35,6 +35,11 @@ form {
   text-align: center;
 }
 
+#submit input:hover{
+  background-color: #17D073;
+  transition: background 0.5s ease-in-out;
+}
+
 #div-form{
   display: flex;
   width: 320px;
@@ -45,9 +50,15 @@ form {
 }
 
 #navLink{
+  margin-top: 90px;
   color: #9A9EA9;
-  font-size: 14px;
+  font-size: 16px;
   align-self: flex-end;
+}
+
+#navLink:hover{
+  color: #5E615C;
+  transition: color 0.5s ease-in-out;
 }
 
 #session-errors ul li{
