--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,16 +1,18 @@
 header {
+  margin-top: 1px;
   background-color: #FFFFFF;
   color: #9A9EA9;
   display: flex;
   justify-content: space-between;
-  height: 70px;
+  height: 65px;
   align-items: center;
+  box-shadow: 0px 2px 14px 0px rgba(168,168,168,1);
+  border-top: solid 1px #dbdbdb;
 }
 
 header h1{
   font-size: 18px;
   font-weight: bold;
-  // color: #26BCF2;
   padding-left: 20px;
   display: flex;
   align-items: center;
