--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
     <script type="text/javascript">
       window.iphoneUrl = "<%= image_url('iphone.png') %>"
+      window.backgroundUrl = "<%= image_url('background-splash.jpg') %>"
     </script>
   </head>
 
