Fix background image splash

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -14,7 +14,7 @@
 
 #splash-main{
   margin:auto;
-  background-image: url(background-splash2.jpg);
+  background-image: url(background-splash2.png);
   background-size: cover;
   height: 850px;
   width: 100%;
