Fix backend issues with Runs, and start on Run Components and Google Map API

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,16 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 
+
     <script type="text/javascript">
       window.iphoneUrl = "<%= image_url('iphone.png') %>"
       window.backgroundUrl = "<%= image_url('background-splash2.png') %>"
     </script>
+
   </head>
 
   <body>
+    <p><%= ENV['MAP_API'] %></p>
     <%= yield %>
   </body>
 </html>
