Complete Google Map API. Complete Login Demo. Modify frontend routes

--- a/app/assets/stylesheets/run-index.scss
+++ b/app/assets/stylesheets/run-index.scss
@@ -36,3 +36,16 @@ td,th{
   border: 0.5px solid #E6E6E5;
   border-spacing: 0px;
 }
+
+#runs-create-run{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  font-size: 18px;
+  color: black;
+}
+
+#runs-create-run{
+  color: white;
+  background-color: orange;
+}
