--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,6 +1,60 @@
+#map-main{
+  display: flex;
+  justify-content: space-around;
+}
+
 #map-container{
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 900px;;
   margin: auto;
   margin-top: 50px;
+}
+
+#map-sidebar{
+  width: 340px;
+  display: flex;
+  flex-direction: column;
+}
+
+#route-details{
+  height: 190px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#route-details-top{
+  height: 30px;
+  background-color: #EFEFEF;
+  color: #444444;
+  font-size: 18px;
+  padding-left: 10px;
+}
+
+#route-details-bot{
+  background-color: #FFFFFF;
+  color: #505050;
+}
+
+#route-details-bot #route-submit{
+  background-color: #FF9527;
+  color: #FFFFFF;
+  text-align: center;
+  width: 130px;
+  padding-left: 25px;
+  padding-right: 25px;
+  border-radius: 4px;
+}
+
+#route-details-bot #route-submit:hover{
+    background-color: #EC800F;
+    transition: background 0.5s ease-in-out;
+}
+
+#route-details-bot form label{
+  color: red;
+  font-size: 24px;
+  padding-right: 5px;
+  display: flex;
+  justify-content: space-around;
 }
