--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
     <script type="text/javascript">
       window.iphoneUrl = "<%= image_url('iphone.png') %>"
       window.backgroundUrl = "<%= image_url('background-splash2.png') %>"
+      window.logoUrl = "<%= image_url('logmyjog.png') %>"
+      window.apiKey ="<%= Rails.application.credentials.google[:api_key] %>"
     </script>
 
   </head>
