--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -8,6 +8,7 @@ header {
   justify-content: space-between;
   box-shadow: 0px 2px 14px 0px rgba(168,168,168,1);
   border-top: solid 1px #dbdbdb;
+  // width: 1050px;
 }
 
 header h1{
@@ -24,6 +25,11 @@ header h1{
 header h1 span{
   font-weight: normal;
   font-size: 34px;
+}
+
+header img{
+  height: 65px;
+  width: 210px;
 }
 
 #nav-id{
@@ -72,4 +78,48 @@ header h1 span{
   margin-left: 20px;
   margin-right: 180px;
   font-weight: normal;
+}
+
+#routes, #workouts, #friends{
+  position: relative;
+}
+
+.header-notifications {
+  z-index: 5;
+  display: none;
+  position: absolute;
+  width: 160px;
+  left: -1px;
+  font-size: 14px;
+  white-space: nowrap;
+  background: #fff;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  overflow: hidden;
+}
+
+#routes:hover .header-notifications {
+  display: block;
+}
+
+#workouts:hover .header-notifications {
+  display: block;
+}
+
+#friends:hover .header-notifications {
+  display: block;
+}
+
+.header-notifications > li {
+  border: 0.5px solid #d3d6dc;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #9A9EA9;
+  font-size: 14px;
+  padding-left: 20px;
+  align-self: center;
+}
+
+.header-notifications > li:hover {
+  color: black;
 }
