--- a/app/assets/stylesheets/run-show.scss
+++ b/app/assets/stylesheets/run-show.scss
@@ -31,6 +31,12 @@
   width: 120px;
   margin-right: 25px;
   border: 1px solid black;
+  text-align: center;
+  color: black;
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #runs-show-description{
@@ -38,6 +44,10 @@
   font-size: 14px;
   width: 400px;
   text-align: left;
+}
+#distance, #miles{
+  color: #9A9EA9;
+  font-size: 14px;
 }
 
 #runs-show-description span{
