Complete WorkoutForm Creation. Complete Workout Index. Fix minor CSS and Link issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Mukta+Malar" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Rails.application.credentials.google[:api_key]}"%>
@@ -13,6 +14,7 @@
       window.iphoneUrl = "<%= image_url('iphone.png') %>"
       window.backgroundUrl = "<%= image_url('background-splash2.png') %>"
       window.logoUrl = "<%= image_url('logmyjog.png') %>"
+      window.runningManUrl = "<%= image_url('running-man.png') %>"
       window.apiKey ="<%= Rails.application.credentials.google[:api_key] %>"
     </script>
 
