--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -58,3 +58,19 @@
   display: flex;
   justify-content: space-around;
 }
+
+#map-show-distance{
+  width: 230px;
+  height: 50px;
+  background-color: #636363;
+  margin-left: 5px;
+  text-align: center;
+  font-size: 24px;
+  color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+}
+
+#map-show-distance-distance{
+  font-size: 12px;
+}
