--- a/app/assets/stylesheets/workouts-index.scss
+++ b/app/assets/stylesheets/workouts-index.scss
@@ -1,5 +1,5 @@
 .workouts-index{
-  width: 1050px;
+  width: 960px;
   margin: auto;
   margin-top: 20px;
   margin-left: 25px;
@@ -13,15 +13,31 @@
 }
 
 #workouts-create{
-  width: 1050px;
+  // width: 1050px;
   display: flex;
-  justify-content: space-between;
   margin-top: 30px;
   margin-left: 5px;
   font-size: 22px;
   color: black;
+  padding-bottom: 10px;
   margin-bottom: 25px;
   border-bottom: 1px solid #d3d6dc;
+}
+
+#workouts-create-workout{
+  width: 175px;
+  height: 40px;
+  background-color: #B3B2B2;
+  color: #FFFFFF;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 3px;
+  margin-left: 10px;
+  margin-right: auto;
+}
+
+#workouts-create-workout:hover{
+  background-color: #797777
 }
 
 #workout-items{
