--- a/app/assets/stylesheets/friends-index.scss
+++ b/app/assets/stylesheets/friends-index.scss
@@ -1,7 +1,12 @@
+#friend-container{
+  width: 100%;
+}
+
 .friends-index{
   width: 770px;
+  padding-right: 190px;
+  margin: auto;
   color: #3098d9;
-  margin-left: 25px;
 }
 
 #friends-index-head{
