--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -6,15 +6,15 @@
 }
 
 #nav-bar{
-  width: 1050px;
+  width: 960px;
   height: 40px;
   display: flex;
   background-color: #F0F2F4;
-  margin-left: 25px;
+  margin:auto;
 }
 
 .nav-box{
-  width: 262.5px;
+  width: 240px;
   border-left: 1px solid #dddddd;
   border-right: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
