--- a/app/assets/stylesheets/workout-form.scss
+++ b/app/assets/stylesheets/workout-form.scss
@@ -1,9 +1,12 @@
+#workout-form-flex-container{
+  width: 100%
+}
+
 #workout-form-container{
   width: 635px;
+  padding-right: 325px;
   margin: auto;
   margin-top: 20px;
-  margin-left: 25px;
-  margin-right: 25px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
