--- a/app/assets/stylesheets/dash-nav.scss
+++ b/app/assets/stylesheets/dash-nav.scss
@@ -1,6 +1,6 @@
 #dash-nav-bar-parent{
   width: 960px;
-  margin-left: 25px;
+  margin:auto;
   margin-top: 30px;
   margin-bottom: 30px;
   border-bottom: 1px solid #D1D0CF;
