--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -7,7 +7,7 @@ header {
   align-items: center;
   box-shadow: 0px 2px 14px 0px rgba(168,168,168,1);
   border-top: solid 1px #dbdbdb;
-  // width: 1050px;
+  width: 100%
 }
 
 header h1{
@@ -29,18 +29,19 @@ header h1 span{
 header img{
   height: 65px;
   width: 210px;
+  margin-left: 15px;
 }
 
 #nav-id{
+  width: 960px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   white-space: nowrap;
-  width: 840px;
 }
 
 .nav{
-  padding: 20px;
   font-size: 16px;
   margin-left: 35px;
 }
@@ -51,7 +52,9 @@ header img{
 
 #logout-greeting{
   display: flex;
-  padding-left: 410px;
+  margin-left: auto;
+  width: 100px;
+  // padding-left: 150px;
   justify-content: space-around;
   align-items: center;
 }
@@ -61,6 +64,7 @@ header img{
   justify-content: space-between;
   align-items: center;
   font-size: 14px;
+  width:100%;
 }
 
 #greeting span{
