--- a/app/assets/stylesheets/run-show.scss
+++ b/app/assets/stylesheets/run-show.scss
@@ -1,13 +1,13 @@
 .runs-show{
-  width: 1050px;
+  width: 960px;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  margin-left: 25px;
+  margin: auto;
 }
 
 #runs-show-left{
-  width: 660px;
+  width: 580px;
   margin-right: 15px;
 }
 
@@ -42,7 +42,7 @@
 #runs-show-description{
   color: #9A9EA9;
   font-size: 14px;
-  width: 400px;
+  width: 360px;
   text-align: left;
 }
 #distance, #miles{
