Add coming soon page to find friends

--- a/app/assets/stylesheets/friends-index.scss
+++ b/app/assets/stylesheets/friends-index.scss
@@ -101,3 +101,15 @@
   margin-right: 10px;
   font-size: 28px;
 }
+
+#find-friends-container{
+  width: 100%;
+}
+
+#find-friends{
+  width: 960px;
+  margin: auto;
+  font-size: 48px;
+  color: black;
+  text-align: center;
+}
